Simplified server side code

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title><%= pageTitle %></title>
+    <title> <%= pageTitle %> </title>
   </head>
   <body>
-    <h1>Error Page not Found</h1>
+    <h1>Error Page Not Found</h1>
   </body>
 </html>
