--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,8 @@
     <title><%= pageTitle %></title>
   </head>
   <body>
-    <h1>homepage</h1>
-    <p> Hey this is a homepage you can surely work on that</p>
+      <h1>This Is HomePage</h1>
+      <hr>
+      <p>This is HomePage you need to work on it</p>
   </body>
 </html>
